@@ -1,6 +1,9 @@
 ChangeLog for PyLint
 ====================
 
+--
+    * included Stefan Rank's patch to deal with 2.4 relative import
+
 2008-01-14  --  0.14.0
     * fix #3733: Messages (dis)appear depending on order of file names
     * fix #4026: pylint.el should require compile
